# sweetbg

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-checks.yml
config/: example.toml
doc/: caramel.1.scd  caramel.5.scd  carameld.1.scd  manju.1.scd  manju.5.scd  manjud.1.scd  meson.build  sweetbg.1.scd  sweetbg.5.scd  sweetbgd.1.scd
protocol/: meson.build
scripts/: all  check  format  sanitize  tidy  valgrind
src/: caramel.c  carameld.c  manju.c  manjud.c  sweetbg.c  sweetbgd.c
src/config/: config.c  config.h  config_write.c  config_write.h
src/doctor/: doctor.c  doctor.h
src/image/: decoders.h  fit.c  fit.h  image.c  image.h  jpeg.c  layout.c  layout.h  palette.c  palette.h  pick.c  pick.h  png.c  webp.c
src/ipc/: client.c  client.h  protocol.c  protocol.h  server.c  server.h
src/query/: json.c  json.h
src/wayland/: output.c  output.h  registry.c  registry.h  shm.c  shm.h  surface.c  surface.h
systemd/: carameld.service  manjud.service  meson.build  sweetbgd.service
tests/: meson.build  test_config.c  test_config_write.c  test_image_fit.c  test_ipc_protocol.c
